<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_snackbar">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:screenOrientation="portrait" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:id="@+id/LinearLayout_signup">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_firstname_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_firstname__editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_firstname__editText_hint"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_lastname_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_lastname_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_lastname_editText_hint"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_email_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_email_editText_hint"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_password_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_password_inputLayout_hint"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_confirmPassword_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_confirmPassword_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_confirmPassword_inputLayout_hint"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:singleLine="true"
                    android:lines="1" />
                <requestFocus></requestFocus>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout_signup">

            <com.dd.processbutton.iml.ActionProcessButton
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:id="@+id/signup_submit"
                android:text="@string/signup_submit"
                android:theme="@style/MyButtonLoading"
                android:layout_weight="1.0"
                custom:pb_textError="Error"
                custom:pb_textComplete="Success"
                custom:pb_textProgress="Loading"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <com.dd.processbutton.iml.ActionProcessButton
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/signup_cancel"
                android:id="@+id/signup_cancel"
                android:layout_weight="1.0"
                android:theme="@style/MyButtonCancel"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>