...
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_snackbar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">



        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"/>


...
            <android.support.design.widget.TextInputLayout
                android:id="@+id/signin_password_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signin_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_password_editText_hint"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:singleLine="true"
...
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout_signin">

            <com.dd.processbutton.iml.ActionProcessButton
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:id="@+id/signin_submitLogin"
                android:text="@string/signin_submitLogin"
                android:theme="@style/MyButtonLoading"
                android:layout_weight="1.0"
                custom:pb_textError="Error"
                custom:pb_textComplete="Success"
                custom:pb_textProgress="Loading"
...
