<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignIn.SignInActivity">

    <item android:id="@+id/modify_profil"
        android:title="@string/modify_profil"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/log_offline"
        android:title="@string/log_offline"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/disconnect"
        android:title="@string/disconnect"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
