<resources>
    <string name="app_name">ShareMyScreen</string>
    <string name="action_settings">Settings</string>

    <string name="signin_username">Username</string>
    <string name="signin_password">Password</string>

    <!--button-->
    <string name="signin_submitLogin">Connexion</string>
    <string name="signin_signup">Inscription</string>
    <string name="signin_settings">Settings</string>

    <!--msg error-->
    <string name="signin_emailEmpty">Veuillez saisir un username</string>
    <string name="signin_passwordEmpty">Veuillez saisir un password</string>


    <string name="signup_name">Nom</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email</string>
    <string name="signup_confirmPassword">Confirmer votre password</string>
    <string name="signup_password">Password</string>

    <!--button-->
    <string name="signup_submit">S\'inscrire</string>
    <string name="signup_cancel">Annuler</string>

    <!--msg error-->
    <string name="signup_lastnameEmpty">Veuillez saisir votre nom</string>
    <string name="signup_firstnameEmpty">Veuillez saisir votre prénom</string>
    <string name="signup_emailEmpty">Veuillez saissir une adresse email</string>
    <string name="signup_emailNotValid">Votre adresse email n\'est pas valide !</string>
    <string name="signup_passwordEmpty">Veuillez saissir un mot de passe</string>
    <string name="signup_confirmPasswordEmpty">Veuillez confirmer votre mot de passe</string>
    <string name="signup_confirmPasswordNotMatch">La confirmation de votre mot de passe ne correspond pas</string>


    <string name="logout_submit">Disconnect</string>

    <string name="settings_ip">Adresse ip</string>
    <string name="settings_port">Port</string>
    <string name="settings_submit">Save</string>
    <string name="settings_cancel">Cancel</string>

    <string name="settings_ipEmpty">Veuillez saissir une adresse ip</string>
    <string name="settings_portEmpty">Veuillez saissir un port</string>
    <string name="signin_username_editText_hint">Veuillez saisir votre login</string>
    <string name="signin_password_editText_hint">Veuillez saisir votre mot de passe</string>
    <string name="signup_username_editText_hint">Veuillez saisir votre login</string>
    <string name="signup_email_editText_hint">Veuillez saisir votre email</string>
    <string name="signup_password_inputLayout_hint">Veuillez saisir votre password</string>
    <string name="signup_confirmPassword_inputLayout_hint">Veuillez confirmer votre password</string>
    <string name="modify_profil">Modifier le profil</string>
    <string name="disconnect">Se deconnecter</string>

    <string name="profile_username_editText_hint">Votre login</string>
    <string name="profile_email_editText_hint">Votre email</string>
    <string name="profile_submit">Sauvegarder</string>
    <string name="profile_cancel">Annuler</string>
    <string name="profile_usernameEmpty">Veuillez saisir un username</string>
    <string name="profile_emailEmpty">Veuillez saissir une adresse email</string>
    <string name="profile_firstname_editText_hint">Votre prénom</string>
    <string name="profile_lastname_editText_hint">Votre nom</string>
    <string name="profile_phone_editText_hint">Votre téléphone</string>
    <string name="connexionError">Il est impossible de contacter le service, veuillez réesayer plus tard ou veuillez vérifier votre connexion</string>
    <string name="api_error">Une erreure est survenue lors de la communication avec le serveur</string>
    <string name="log_offline">Log Offline</string>
    <string name="offline">Travail hors connexion</string>
    <string name="profile_lasttNameEmpty">error</string>
    <string name="profile_lastNameEmpty">error</string>
    <string name="profile_EmailEmpty">error</string>
    <string name="notEmail">error</string>
    <string name="profile_PhoneEmpty">error</string>
    <string name="connexionOfflline_errorUsernameOrPassword">Password ou username incorrects</string>
    <string name="createRoom_by_user_name_editText_hint">nom de la conversasion</string>
    <string name="createRoom_by_user_choose_user_hint">Ajouter un utilisateur</string>
    <string name="createRoom_by_user_submit">Ajouter</string>
    <string name="createRoom_by_user_cancel">Annuler</string>
    <string name="createRoom_by_user_name_isEmpty">Veuillez saisir un nom</string>
    <string name="createRoom_by_user_user_isEmpty">Veuillez selectionner un utilisateur</string>
    <string name="createRoom_by_user_user_notFound">Uitlisateur selectionner introuvable</string>
    <string name="room_createRoomByGroup">A partir d\'un groupe</string>
    <string name="room_createRoomByUser">A partir d\'un utilisateur</string>
    <string name="room_addRoom">Ajouter une conversation</string>
    <string name="settings">Paramètres</string>
    <string name="drawer_open">menu ouvert</string>
    <string name="drawer_close">menu fermé</string>





    <!--<string name="app_name">Navigation View</string>-->

    <string name="hello_world">Hello world!</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="navigation_view_item_1">Navigation Item 1</string>
    <string name="navigation_view_item_2">Navigation Item 2</string>
    <string name="navigation_view_item_3">Navigation Item 3</string>
    <string name="navigation_view_item_4">Navigation Item 4</string>
    <string name="navigation_view_item_5">Navigation Item 5</string>
    <string name="navigation_view_item_6">Navigation Item 6</string>
    <string name="navigation_view_category_1">Navigation View Category</string>
    <string name="navigation_view_category_2">Navigation View Category</string>
    <string name="navigation_room">Conversation</string>
    <string name="navigation_account">Votre compte</string>
    <string name="navigation_log">Log offline</string>
    <string name="navigation_settings">Paramètres</string>
    <string name="navigation_logout">Se déconnecter</string>
    <string name="navigation_profile">Profil</string>
    <string name="signin_facebook">Facebook</string>
    <string name="signin_google">Google</string>

    <string name="facebook_app_id">565509136962999</string>
    <string name="server_client_id">220029720276-a8okmd49jv5ft5638smpvn58781gjc50.apps.googleusercontent.com</string>
    <string name="signup_firstname__editText_hint">Prénom</string>
    <string name="signup_lastname_editText_hint">Nom</string>
    <string name="createOrganization_name_editText_hint">Nom de la nouvelle organsization</string>
    <string name="createOrganization_submit">Créer</string>
    <string name="createOrganization_skip">passer</string>
    <string name="createOrganization_nameEmpty">Veuillez saisir un nom pour votre organization</string>
    <string name="invitOrganization_search_editText_hint">Inviter quelqu\'un à votre organisation</string>
    <string name="invitOrganization_back">retour</string>
    <string name="invitOrganization_submit">Inviter</string>
    <string name="invitOrganization_searchEmpty">Veuillez saisir votre recherche</string>
    <string name="organization_submenu_invit">Inviter</string>
    <string name="organization_submenu_members">Voir les membres</string>
    <string name="organization_submenu_quit">quitter</string>
    <string name="organization_dialog_invit_cancel">Annuler</string>
    <string name="navigation_organisation">Organisation</string>
    <string name="invitOrganization_title">Inviter des membres dans l\'organisation :</string>
    <string name="membersOrganization_title">Les membres de l\'organisation :</string>
    <string name="organization_dialog_create_submit">Creer</string>
    <string name="organization_dialog_create_cancel">Annuler</string>
    <string name="organization_dialog_create_title">Créer une nouvelle organization</string>
    <string name="organization_dialog_create_name_editText_hint">Nom de la nouvelle organization</string>
    <string name="room_title">Conversations</string>
    <string name="organization_delete">Supprimer l\'organisation</string>
    <string name="room_dialog_create_submit">Ajouter</string>
    <string name="room_dialog_create_cancel">Annuler</string>
    <string name="room_dialog_create_name_editText">Nom de la conversation</string>
    <string name="createRoom_nameEmpty">Veuillez remplir ce champs</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_invitation_member">Inviter des membres</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="menu_list_member">Liste des membres</string>

</resources>
